java CLI additions to handle reflection permissions in JDK17